# HCIBGA

./: .gitignore  README.md
Browser/: .env.production  .eslintrc.js  index.html  package-lock.json  package.json  pnpm-lock.yaml
Browser/config/: vite.config.base.ts  vite.config.dev.ts  vite.config.prod.ts
Browser/docs/api/: info-export.md  info-import.md  material-list.md  material-review.md  material-statistics.md  material-upload.md  (+7 more)
Browser/src/: env.d.ts
HMAPP/: build-profile.json5
HMAPP/AppScope/: app.json5
Server/: README.md  auth.py  go.mod  go.sum  main.go  main.py  pyproject.toml  run.py
Server/api/: bonus.go  export.go  info_import.go  llm.go  material_list.go  material_upload.go  message.go  submit_material_batch.go  user_info.go  user_setting.go  volunteer.go
Server/api/.cph/: .user_info.go_116a9d2a359359b49126a6cf91922bce.prob
Server/docs/: api_docs.md  保研条例.md  信息分析.md  审核信息.md  识别文件.md
Server/hci_bga_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Server/llm/3rd/: model.go  orchestration.go  prompt.go  tools_node.go
Server/llm/lib/: orchestration.go  prompt.go  tools_node.go
Server/llm/parse/: lambda_func.go  model.go  orchestration.go  prompt.go  tools_node.go  types.go
Server/llm/suggestion/: lambda_func.go  model.go  orchestration.go  prompt.go  tools_node.go  types.go
Server/models/: response.py
Server/routers/: forms.py  lists.py  materials.py  messages.py  profile.py  upload.py  user_center.py  users.py
Server/schema/: 3rdSource.schema  GetInformation.schema  InformationLibrary.schema  Suggestion.schema
(+100 files in other folders)
